# streamdeck_V1.0

./: .gitignore  ACCEPTANCE_VERIFICATION.md  DELIVERABLES.md  DELIVERY_SUMMARY.txt  INDEX.md  PROJECT_SUMMARY.txt  QUICK_START.md  README.md  globals.xml  lv_conf.h  project.xml
components/: cmp_macro_key_slot.xml  cmp_profile_badge.xml  cmp_status_bar.xml  cmp_tile_button.xml
embedded/: INPUT_MAPPING.h  Makefile  main.c
screens/: scr_encoders.xml  scr_home.xml  scr_macros.xml  scr_profiles.xml  scr_quick_overlay.xml  scr_rgb.xml
simulator/: CMakeLists.txt
simulator/include/: debug_panel.h  simulator_input.h  ui_events.h
simulator/src/: debug_panel.c  main.c  ui_events.c
styles/: STYLES.md  styles.xml
ui/components/: cmp_macro_key_slot.xml  cmp_profile_badge.xml  cmp_status_bar.xml  cmp_tile_widget.xml
ui/screens/: scr_encoders.xml  scr_home.xml  scr_macros.xml  scr_profiles.xml  scr_quick_overlay.xml  scr_rgb.xml
